tests/snapshots/match_expression_tests__match_complex_expressions.snap
---
source: tests/match_expression_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Boolean {
                        value: true,
                        span: Span {
                            start: 22,
                            end: 26,
                        },
                    },
                    arms: [
                        MatchArm {
                            conditions: Some(
                                [
                                    Binary {
                                        left: Variable {
                                            name: Span {
                                                start: 34,
                                                end: 36,
                                            },
                                            span: Span {
                                                start: 34,
                                                end: 36,
                                            },
                                        },
                                        op: Gt,
                                        right: Integer {
                                            value: [
                                                48,
                                            ],
                                            span: Span {
                                                start: 39,
                                                end: 40,
                                            },
                                        },
                                        span: Span {
                                            start: 34,
                                            end: 40,
                                        },
                                    },
                                ],
                            ),
                            body: String {
                                value: [
                                    39,
                                    112,
                                    111,
                                    115,
                                    105,
                                    116,
                                    105,
                                    118,
                                    101,
                                    39,
                                ],
                                span: Span {
                                    start: 44,
                                    end: 54,
                                },
                            },
                            span: Span {
                                start: 34,
                                end: 54,
                            },
                        },
                        MatchArm {
                            conditions: Some(
                                [
                                    Binary {
                                        left: Variable {
                                            name: Span {
                                                start: 60,
                                                end: 62,
                                            },
                                            span: Span {
                                                start: 60,
                                                end: 62,
                                            },
                                        },
                                        op: Lt,
                                        right: Integer {
                                            value: [
                                                48,
                                            ],
                                            span: Span {
                                                start: 65,
                                                end: 66,
                                            },
                                        },
                                        span: Span {
                                            start: 60,
                                            end: 66,
                                        },
                                    },
                                ],
                            ),
                            body: String {
                                value: [
                                    39,
                                    110,
                                    101,
                                    103,
                                    97,
                                    116,
                                    105,
                                    118,
                                    101,
                                    39,
                                ],
                                span: Span {
                                    start: 70,
                                    end: 80,
                                },
                            },
                            span: Span {
                                start: 60,
                                end: 80,
                            },
                        },
                        MatchArm {
                            conditions: None,
                            body: String {
                                value: [
                                    39,
                                    122,
                                    101,
                                    114,
                                    111,
                                    39,
                                ],
                                span: Span {
                                    start: 97,
                                    end: 103,
                                },
                            },
                            span: Span {
                                start: 86,
                                end: 103,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 107,
                    },
                },
                span: Span {
                    start: 6,
                    end: 107,
                },
            },
            span: Span {
                start: 6,
                end: 108,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 108,
    },
}
