tests/snapshots/match_expression_tests__match_empty.snap
---
source: tests/match_expression_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Variable {
                        name: Span {
                            start: 22,
                            end: 28,
                        },
                        span: Span {
                            start: 22,
                            end: 28,
                        },
                    },
                    arms: [],
                    span: Span {
                        start: 16,
                        end: 34,
                    },
                },
                span: Span {
                    start: 6,
                    end: 34,
                },
            },
            span: Span {
                start: 6,
                end: 35,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 35,
    },
}
