tests/snapshots/match_expression_tests__match_mixed_condition_types.snap
---
source: tests/match_expression_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Variable {
                        name: Span {
                            start: 22,
                            end: 28,
                        },
                        span: Span {
                            start: 22,
                            end: 28,
                        },
                    },
                    arms: [
                        MatchArm {
                            conditions: Some(
                                [
                                    Integer {
                                        value: [
                                            49,
                                        ],
                                        span: Span {
                                            start: 36,
                                            end: 37,
                                        },
                                    },
                                    String {
                                        value: [
                                            39,
                                            111,
                                            110,
                                            101,
                                            39,
                                        ],
                                        span: Span {
                                            start: 39,
                                            end: 44,
                                        },
                                    },
                                    Boolean {
                                        value: true,
                                        span: Span {
                                            start: 46,
                                            end: 50,
                                        },
                                    },
                                ],
                            ),
                            body: String {
                                value: [
                                    39,
                                    109,
                                    97,
                                    116,
                                    99,
                                    104,
                                    39,
                                ],
                                span: Span {
                                    start: 54,
                                    end: 61,
                                },
                            },
                            span: Span {
                                start: 36,
                                end: 61,
                            },
                        },
                        MatchArm {
                            conditions: None,
                            body: String {
                                value: [
                                    39,
                                    110,
                                    111,
                                    32,
                                    109,
                                    97,
                                    116,
                                    99,
                                    104,
                                    39,
                                ],
                                span: Span {
                                    start: 78,
                                    end: 88,
                                },
                            },
                            span: Span {
                                start: 67,
                                end: 88,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 92,
                    },
                },
                span: Span {
                    start: 6,
                    end: 92,
                },
            },
            span: Span {
                start: 6,
                end: 93,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 93,
    },
}
