tests/snapshots/match_expression_tests__match_no_default.snap
---
source: tests/match_expression_tests.rs
assertion_line: 85
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Variable {
                        name: Span {
                            start: 22,
                            end: 28,
                        },
                        span: Span {
                            start: 22,
                            end: 28,
                        },
                    },
                    arms: [
                        MatchArm {
                            conditions: Some(
                                [
                                    Integer {
                                        value: [
                                            49,
                                        ],
                                        span: Span {
                                            start: 36,
                                            end: 37,
                                        },
                                    },
                                ],
                            ),
                            body: String {
                                value: [
                                    39,
                                    111,
                                    110,
                                    101,
                                    39,
                                ],
                                span: Span {
                                    start: 41,
                                    end: 46,
                                },
                            },
                            span: Span {
                                start: 36,
                                end: 46,
                            },
                        },
                        MatchArm {
                            conditions: Some(
                                [
                                    Integer {
                                        value: [
                                            50,
                                        ],
                                        span: Span {
                                            start: 52,
                                            end: 53,
                                        },
                                    },
                                ],
                            ),
                            body: String {
                                value: [
                                    39,
                                    116,
                                    119,
                                    111,
                                    39,
                                ],
                                span: Span {
                                    start: 57,
                                    end: 62,
                                },
                            },
                            span: Span {
                                start: 52,
                                end: 62,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 66,
                    },
                },
                span: Span {
                    start: 6,
                    end: 66,
                },
            },
            span: Span {
                start: 6,
                end: 67,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 67,
    },
}
